@@ -24,6 +24,7 @@ release 0.14.3
 	* fixed CIDR-distance calculation in the precense of IPv6 peers
 	* save partial resume data for torrents that are queued for checking
 	  or checking, to maintain stats and renamed files
+	* Don't try IPv6 on windows if it's not installed
 
 release 0.14.2
 
